--- a/style.css
+++ b/style.css
@@ -22,8 +22,17 @@ body {
   width: calc(100% - 2rem);
   height: calc(100% - 2rem);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  perspective: 1250px;
+}
+
+.topFold, .bottomFold {
+  height: 120px;
+  background: white;
+  width: 100%;
+  max-width: 460px;
 }
 
 .card {
