--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   --blue-shadow: #2B272C;
   --blue-midtone: #9EB4F8;
+  --blue-lightened-midtone: #DCE3F8;
   --neon-blue-shadow: #2B1543;
   --neon-blue-highlight: #4F33F3;
   --neon-blue-midtone: #101987;
@@ -25,21 +26,45 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  perspective: 1250px;
+  perspective: 1200px;
 }
 
-.topFold, .bottomFold {
+.topFold,
+.bottomFold {
   height: 120px;
   background: white;
   width: 100%;
   max-width: 460px;
+  border: 2px solid var(--blue-shadow);
+  box-sizing: border-box;
+}
+
+.topFold {
+  transform-origin: bottom center;
+  transform-style: preserve-3d;
+  transform: rotateX(-25deg);
+  border-radius: 8px 8px 0 0;
+  background-color: var(--blue-midtone);
+}
+
+.bottomFold {
+  transform-origin: top center;
+  transform-style: preserve-3d;
+  transform: rotateX(30deg);
+  border-radius: 0 0 8px 8px;
 }
 
 .card {
-  background: white;
+  background-color: var(--blue-lightened-midtone);
   padding: 70px 40px;
+  height: 460px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   max-width: 460px;
   box-sizing: border-box;
+  border: 2px solid var(--blue-shadow);
+  border-width: 0 2px;
 }
 
 .card-message {
@@ -50,12 +75,18 @@ body {
 .card-signature {
   font-size: 12px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+.card-signature img {
+  margin-right: 1rem;
 }
 
 .button {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 2rem;
+  right: 2rem;
   font-family: sans-serif;
   text-decoration: none;
   color: inherit;
