🐋👓 Checkpoint ./snowAnimation.js:2246547/14326 ./script.js:2246547/51 ./index.html:2246547/1525 ./style.css:2246547/4775

--- a/style.css
+++ b/style.css
@@ -97,3 +97,15 @@ body {
   font-weight: bold;
   font-size: 14px;
 }
+
+.sparkleCanvas {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.sparkleCanvas {
+  pointer-events: none;
+}
