🗼🙈 Checkpoint ./3DPresents.js:2246547/6914 ./style.css:2246547/47 ./index.html:2246547/166

--- a/style.css
+++ b/style.css
@@ -158,14 +158,13 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 1;
 }
 
 .presents-1 {
   position: absolute;
   top: 2vw;
   left: 2vw;
-  width: 250px;
-  height: 250px;
 }
 
 .presents-2 {
