--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@ body {
   margin: 0;
 }
 
-@keyframes zoomOut {
-  0% {
-    transform: scale(1.1);
-  }
+@media (max-width: 600px) {
+  @keyframes zoomOut {
+    0% {
+      transform: scale(1.1);
+    }
 
-  100% {
-    transform: scale(1);
+    100% {
+      transform: scale(1);
+    }
   }
 }
 
@@ -35,6 +37,15 @@ body {
   pointer-events: none;
 }
 
+@media (max-width: 600px) {
+  .cardPositioningContainer {
+    top: 2rem;
+    left: 2rem;
+    width: calc(100% - 4rem);
+    height: calc(100% - 4rem);
+  }
+}
+
 .topFold,
 .bottomFold {
   transition: all 0.8s ease;
@@ -45,6 +56,13 @@ body {
   border: 2px solid var(--blue-shadow);
   box-sizing: border-box;
   pointer-events: auto;
+}
+
+@media (max-width: 600px) {
+  .topFold,
+  .bottomFold {
+    height: 80px;
+  }
 }
 
 @keyframes topUnfold {
@@ -85,6 +103,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 8px 8px 0 0;
 }
 
 @keyframes bottomUnfold {
@@ -125,6 +144,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 0 0 8px 8px;
 }
 
 .card {
@@ -140,10 +160,23 @@ body {
   pointer-events: auto;
 }
 
+@media (max-width: 600px) {
+  .card {
+    padding: 36px;
+  }
+}
+
 .card-message {
   font-size: 24px;
   line-height: 34px;
   margin-bottom: 0.4em;
+}
+
+@media (max-width: 600px) {
+  .card-message {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .card-signature {
@@ -158,9 +191,6 @@ body {
 }
 
 .button {
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
   font-family: sans-serif;
   text-decoration: none;
   color: inherit;
@@ -170,7 +200,8 @@ body {
   padding: 4px 10px;
   font-weight: bold;
   font-size: 14px;
-  z-index: 3;
+  margin-top: 4rem;
+  pointer-events: auto;
 }
 
 .sparkleCanvas {
