--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   top: 1rem;
   left: 1rem;
   width: calc(100% - 2rem);
-  height: calc(100% - 2rem);
+  min-height: calc(100% - 2rem);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@ body {
     top: 2rem;
     left: 2rem;
     width: calc(100% - 4rem);
-    height: calc(100% - 4rem);
+    min-height: calc(100% - 4rem);
   }
 }
 
@@ -200,7 +200,7 @@ body {
   padding: 4px 10px;
   font-weight: bold;
   font-size: 14px;
-  margin-top: 4rem;
+  margin: 4rem 0;
   pointer-events: auto;
 }
 
