--- a/style.css
+++ b/style.css
@@ -2,12 +2,8 @@ body {
   --blue-shadow: #2B272C;
   --blue-midtone: #9EB4F8;
   --blue-lightened-midtone: #DCE3F8;
-
-  background-color: var(--blue-shadow);
-  color: var(--blue-shadow);
-  font-family: Menlo, monospace;
   margin: 0;
-  background-image: url"https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c93%2Fflag%20gif.gif?v=1593306635783"
+  background-image: url "https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c93%2Fflag%20gif.gif?v=1593306635783"
 }
 
 @keyframes zoomOut {
@@ -166,10 +162,10 @@ body {
 }
 
 .card-message {
-  font-size: 26px;
+  font-size: 24px;
   line-height: 34px;
   margin-bottom: 0.4em;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Crimson Text', serif;
 }
 
 .card-message h1 {
@@ -179,7 +175,7 @@ body {
 
 @media (max-width: 600px) {
   .card-message {
-    font-size: 16px;
+    font-size: 24px;
     line-height: 24px;
   }
 }
@@ -209,32 +205,5 @@ body {
 
 .sparkleCanvas {
   pointer-events: none;
-}
-
-.presents {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 2;
-}
-
-.presents-1 {
-  position: absolute;
-  top: 2vw;
-  left: 3vw;
-}
-
-.presents-2 {
-  position: absolute;
-  bottom: 4vw;
-  left: 18vw;
-}
-
-.presents-3 {
-  position: absolute;
-  right: 10vw;
-  top: 35vh;
 }
 
