--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
-background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c93%2Fflag%20gif.gif?v=1593306635783);
-  
+  background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c93%2Fflag%20gif.gif?v=1593306635783);
+
   --blue-shadow: #2B272C;
   --blue-midtone: #cc3300;
   --blue-lightened-midtone: #000066;
   margin: 0;
-  
 }
 
 @keyframes zoomOut {
@@ -45,7 +44,7 @@ background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c9
 
 .topFold,
 .bottomFold {
-  transition: all 1.0s ease;
+  transition: all 1s ease;
   height: 140px;
   background: white;
   width: 100%;
@@ -145,9 +144,8 @@ background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c9
   display: flex;
   justify-content: center;
   color: white;
-  font-family: 'Crimson Text', serif;
+  font-family: "Crimson Text", serif;
   font-size: 24px;
-  
 }
 
 .card {
@@ -173,7 +171,7 @@ background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c9
   font-size: 28px;
   line-height: 34px;
   margin-bottom: 0.4em;
-  font-family: 'Crimson Text', serif;
+  font-family: "Crimson Text", serif;
   color: white;
 }
 
@@ -199,10 +197,3 @@ background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c9
 .card-signature img {
   margin-right: 1rem;
 }
-
-
-
-
-
-
-
