--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://cdn.glitch.com/fef41ef6-6588-48a2-bc51-98ad14b83c93%2Fflag%20gif.gif?v=1593306635783);
+  background-image: url(https://cdn.glitch.com/d71cc0ec-0902-4911-be7e-0f55c5d0b21c%2Fhsf-logo-tagline-en.png?v=1595824755373);
 
   --blue-shadow: #2B272C;
   --blue-midtone: #cc3300;
@@ -100,6 +100,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 8px 8px 0 0;
+  font: 
 }
 
 @keyframes bottomUnfold {
