--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 .bottomFold {
   transition: all 1s ease;
   height: 140px;
-  background: white;
+  
   width: 100%;
   max-width: 460px;
   border: 2px solid var(--blue-shadow);
@@ -79,7 +79,7 @@ body {
   transform-style: preserve-3d;
   transform: rotateX(-25deg);
   border-radius: 8px 8px 0 0;
-  background-color: white;
+  
 }
 
 .topFold:hover {
@@ -100,7 +100,13 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 8px 8px 0 0;
-  font: 
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-family: "Crimson Text", serif;
+  font-size: 30px;
+  
+  
 }
 
 @keyframes bottomUnfold {
