--- a/style.css
+++ b/style.css
@@ -98,13 +98,13 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 110%;
   border-radius: 8px 8px 0 0;
-  display: flex;
-  justify-content: center;
   color: white;
   font-family: "Crimson Text", serif;
   font-size: 30px;
+  text-align: center;
+  
   
   
 }
@@ -152,7 +152,9 @@ body {
   justify-content: center;
   color: white;
   font-family: "Crimson Text", serif;
-  font-size: 24px;
+  font-size: 28px;
+  text-align: center;
+  
 }
 
 .card {
