--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
   height: 140px;
   
   width: 100%;
-  max-width: 460px;
+  max-width: 560px;
   border: 2px solid var(--blue-shadow);
   box-sizing: border-box;
   pointer-events: auto;
@@ -98,12 +98,13 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 110%;
+  height: 100%;
   border-radius: 8px 8px 0 0;
   color: white;
   font-family: "Crimson Text", serif;
   font-size: 30px;
   text-align: center;
+  display:flex;
   
   
   
@@ -163,7 +164,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 460px;
+  max-width: 560px;
   box-sizing: border-box;
   border: 2px solid var(--blue-shadow);
   border-width: 0 2px;
