✊🚘 Checkpoint ./style.css:17624169/21

--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ body {
   border: 2px solid var(--blue-shadow);
   border-width: 0 2px;
   pointer-events: auto;
+  max-height: 560px;
 }
 
 @media (max-width: 600px) {
